--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,37 +102,37 @@
                     <div class="method-list-content passed suite-OsintMon_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="invalidTestCases.InvalidLogin" hash-for-method="InvalidCredentials">InvalidCredentials</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.InvalidLogin" hash-for-method="InvalidCredentials">InvalidCredentials</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="invalidTestCases.InvalidLogin" hash-for-method="NoCredentials">NoCredentials</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.InvalidLogin" hash-for-method="NoCredentials">NoCredentials</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="validTestcases.ValidLogin" hash-for-method="dropdownSelection">dropdownSelection</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.ValidLogin" hash-for-method="dropdownSelection">dropdownSelection</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="validTestcases.ValidLogin" hash-for-method="logOut">logOut</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.ValidLogin" hash-for-method="logOut">logOut</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="validTestcases.ValidLogin" hash-for-method="validCredentials(habeeb, habeeb@cts, Welcome Habeeb)">validCredentials(habeeb, habeeb@cts, Welcome Habeeb)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.ValidLogin" hash-for-method="validCredentials(habeeb, habeeb@cts, Welcome Habeeb)">validCredentials(habeeb, habeeb@cts, Welcome Habeeb)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="osintMonTestCases.VerifyTitle" hash-for-method="verifyPageTitle">verifyPageTitle</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="verifyTitle.VerifyTitle" hash-for-method="verifyPageTitle">verifyPageTitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="validTestcases.ValidLogin" hash-for-method="viewMonitor">viewMonitor</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-OsintMon_Suite" title="loginTest.ValidLogin" hash-for-method="viewMonitor">viewMonitor</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-OsintMon_Suite -->
@@ -150,7 +150,7 @@
           <div class="suite-OsintMon_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">osintMonTestCases.VerifyTitle</span>
+              <span class="class-name">verifyTitle.VerifyTitle</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -165,7 +165,7 @@
           <div class="suite-OsintMon_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">invalidTestCases.InvalidLogin</span>
+              <span class="class-name">loginTest.InvalidLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -187,7 +187,7 @@
           <div class="suite-OsintMon_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">validTestcases.ValidLogin</span>
+              <span class="class-name">loginTest.ValidLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -236,12 +236,12 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;VerifyTitle&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;osintMonTestCases.VerifyTitle&quot;/&gt;
+      &lt;class name=&quot;verifyTitle.VerifyTitle&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- VerifyTitle --&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;NoCredentials&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;invalidTestCases.InvalidLogin&quot;/&gt;
+      &lt;class name=&quot;loginTest.InvalidLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- NoCredentials --&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;ValidLogin&quot;&gt;
@@ -249,7 +249,7 @@
     &lt;parameter name=&quot;password&quot; value=&quot;habeeb@cts&quot;/&gt;
     &lt;parameter name=&quot;userName&quot; value=&quot;habeeb&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;validTestcases.ValidLogin&quot;/&gt;
+      &lt;class name=&quot;loginTest.ValidLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ValidLogin --&gt;
 &lt;/suite&gt; &lt;!-- OsintMon Suite --&gt;
@@ -297,38 +297,38 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'NoCredentials')
-data.setCell(0, 2, 'invalidTestCases.InvalidLogin')
-data.setCell(0, 3, 24533);
+data.setCell(0, 1, 'validCredentials')
+data.setCell(0, 2, 'loginTest.ValidLogin')
+data.setCell(0, 3, 12737);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validCredentials')
-data.setCell(1, 2, 'validTestcases.ValidLogin')
-data.setCell(1, 3, 16657);
+data.setCell(1, 1, 'NoCredentials')
+data.setCell(1, 2, 'loginTest.InvalidLogin')
+data.setCell(1, 3, 6942);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'InvalidCredentials')
-data.setCell(2, 2, 'invalidTestCases.InvalidLogin')
-data.setCell(2, 3, 4613);
+data.setCell(2, 2, 'loginTest.InvalidLogin')
+data.setCell(2, 3, 4053);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'viewMonitor')
-data.setCell(3, 2, 'validTestcases.ValidLogin')
-data.setCell(3, 3, 3890);
+data.setCell(3, 1, 'dropdownSelection')
+data.setCell(3, 2, 'loginTest.ValidLogin')
+data.setCell(3, 3, 3642);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'dropdownSelection')
-data.setCell(4, 2, 'validTestcases.ValidLogin')
-data.setCell(4, 3, 3273);
+data.setCell(4, 1, 'viewMonitor')
+data.setCell(4, 2, 'loginTest.ValidLogin')
+data.setCell(4, 3, 2207);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'logOut')
-data.setCell(5, 2, 'validTestcases.ValidLogin')
-data.setCell(5, 3, 1061);
+data.setCell(5, 2, 'loginTest.ValidLogin')
+data.setCell(5, 3, 1326);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'verifyPageTitle')
-data.setCell(6, 2, 'osintMonTestCases.VerifyTitle')
-data.setCell(6, 3, 31);
+data.setCell(6, 2, 'verifyTitle.VerifyTitle')
+data.setCell(6, 3, 17);
 window.suiteTableData['OsintMon_Suite']= { tableData: data, tableDiv: 'times-div-OsintMon_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 54 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-OsintMon_Suite">
               </div> <!-- times-div-OsintMon_Suite -->
             </div> <!-- times-div -->
@@ -354,91 +354,91 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">validTestcases.ValidLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">loginTest.ValidLogin</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">SetUrl</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">osintMonTestCases.VerifyTitle</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">verifyTitle.VerifyTitle</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">verifyPageTitle</span>
-                <span class="method-start">28289 ms</span>
+                <span class="method-start">17604 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=verifyPageTitle status=SUCCESS method=VerifyTitle.verifyPageTitle()[pri:0, instance...)</span>
-                <span class="method-start">28325 ms</span>
+                <span class="method-start">17624 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">28340 ms</span>
+                <span class="method-start">17634 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">invalidTestCases.InvalidLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">loginTest.InvalidLogin</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">NoCredentials</span>
-                <span class="method-start">29204 ms</span>
+                <span class="method-start">18201 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=NoCredentials status=SUCCESS method=InvalidLogin.NoCredentials()[pri:1, instance:in...)</span>
-                <span class="method-start">53745 ms</span>
+                <span class="method-name">getResult([TestResult name=NoCredentials status=SUCCESS method=InvalidLogin.NoCredentials()[pri:1, instance:lo...)</span>
+                <span class="method-start">25155 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">InvalidCredentials</span>
-                <span class="method-start">53748 ms</span>
+                <span class="method-start">25162 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=InvalidCredentials status=SUCCESS method=InvalidLogin.InvalidCredentials()[pri:2, i...)</span>
-                <span class="method-start">58364 ms</span>
+                <span class="method-start">29216 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">58366 ms</span>
+                <span class="method-start">29217 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">validTestcases.ValidLogin</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">loginTest.ValidLogin</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">validCredentials(habeeb, habeeb@cts, Welcome Habeeb)</span>
-                <span class="method-start">58425 ms</span>
+                <span class="method-start">29288 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=validCredentials status=SUCCESS method=ValidLogin.validCredentials(java.lang.String...)</span>
-                <span class="method-start">75086 ms</span>
+                <span class="method-start">42030 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">viewMonitor</span>
-                <span class="method-start">75088 ms</span>
+                <span class="method-start">42032 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=viewMonitor status=SUCCESS method=ValidLogin.viewMonitor()[pri:4, instance:validTes...)</span>
-                <span class="method-start">78980 ms</span>
+                <span class="method-name">getResult([TestResult name=viewMonitor status=SUCCESS method=ValidLogin.viewMonitor()[pri:4, instance:loginTes...)</span>
+                <span class="method-start">44245 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">dropdownSelection</span>
-                <span class="method-start">78981 ms</span>
+                <span class="method-start">44247 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=dropdownSelection status=SUCCESS method=ValidLogin.dropdownSelection()[pri:5, insta...)</span>
-                <span class="method-start">82258 ms</span>
+                <span class="method-start">47892 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">logOut</span>
-                <span class="method-start">82261 ms</span>
+                <span class="method-start">47895 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=logOut status=SUCCESS method=ValidLogin.logOut()[pri:6, instance:validTestcases.Val...)</span>
-                <span class="method-start">83325 ms</span>
+                <span class="method-name">getResult([TestResult name=logOut status=SUCCESS method=ValidLogin.logOut()[pri:6, instance:loginTest.ValidLog...)</span>
+                <span class="method-start">49228 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">83326 ms</span>
+                <span class="method-start">49228 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">83438 ms</span>
+                <span class="method-start">49328 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
