--- a/test-output/old/OsintMon Suite/methods-alphabetical.html
+++ b/test-output/old/OsintMon Suite/methods-alphabetical.html
@@ -1,42 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OsintMon Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bed7a6">  <td>20/10/05 15:22:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@6325a3ee]">InvalidCredentials</td> 
+<tr bgcolor="bed7a6">  <td>20/10/05 17:09:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:loginTest.InvalidLogin@6325a3ee]">InvalidCredentials</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="bed7a6">  <td>20/10/05 15:22:27</td>   <td>-24544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@6325a3ee]">NoCredentials</td> 
+<tr bgcolor="bed7a6">  <td>20/10/05 17:09:08</td>   <td>-6961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:loginTest.InvalidLogin@6325a3ee]">NoCredentials</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:21:58</td>   <td>-53740</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&gt;&gt;SetUrl</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:08:49</td>   <td>-25151</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&gt;&gt;SetUrl</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/10/05 15:23:17</td>   <td>25233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.dropdownSelection()[pri:5, instance:validTestcases.ValidLogin@5b87ed94]">dropdownSelection</td> 
+<tr bgcolor="a9cea0">  <td>20/10/05 17:09:34</td>   <td>19085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.dropdownSelection()[pri:5, instance:loginTest.ValidLogin@5b87ed94]">dropdownSelection</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:22:26</td>   <td>-25407</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">&lt;&lt;endReport</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:07</td>   <td>-7528</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:verifyTitle.VerifyTitle@78c03f1f]">&lt;&lt;endReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:22:56</td>   <td>4618</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;endReport</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:19</td>   <td>4056</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:loginTest.InvalidLogin@6325a3ee]">&lt;&lt;endReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29578</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;endReport</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:39</td>   <td>24066</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;endReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:22:26</td>   <td>-25420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:07</td>   <td>-7536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:verifyTitle.VerifyTitle@78c03f1f]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:22:52</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:14</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:22:56</td>   <td>4617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:19</td>   <td>4055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:13</td>   <td>21339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:31</td>   <td>16868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:17</td>   <td>25232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:34</td>   <td>19083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:20</td>   <td>28511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:37</td>   <td>22731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:39</td>   <td>24066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/10/05 15:23:20</td>   <td>28512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.logOut()[pri:6, instance:validTestcases.ValidLogin@5b87ed94]">logOut</td> 
+<tr bgcolor="a9cea0">  <td>20/10/05 17:09:37</td>   <td>22733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.logOut()[pri:6, instance:loginTest.ValidLogin@5b87ed94]">logOut</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29691</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9fad9d">  <td>20/10/05 17:09:39</td>   <td>24166</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:loginTest.ValidLogin@5b87ed94]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/10/05 15:22:56</td>   <td>4677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.validCredentials(java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:validTestcases.ValidLogin@5b87ed94]">validCredentials</td> 
+<tr bgcolor="a9cea0">  <td>20/10/05 17:09:19</td>   <td>4126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.validCredentials(java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:loginTest.ValidLogin@5b87ed94]">validCredentials</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="d86b78">  <td>20/10/05 15:22:26</td>   <td>-25459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">verifyPageTitle</td> 
+<tr bgcolor="d86b78">  <td>20/10/05 17:09:07</td>   <td>-7558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:verifyTitle.VerifyTitle@78c03f1f]">verifyPageTitle</td> 
   <td>main@1675763772</td>   <td></td> </tr>
-<tr bgcolor="a9cea0">  <td>20/10/05 15:23:13</td>   <td>21340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.viewMonitor()[pri:4, instance:validTestcases.ValidLogin@5b87ed94]">viewMonitor</td> 
+<tr bgcolor="a9cea0">  <td>20/10/05 17:09:31</td>   <td>16870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.viewMonitor()[pri:4, instance:loginTest.ValidLogin@5b87ed94]">viewMonitor</td> 
   <td>main@1675763772</td>   <td></td> </tr>
 </table>
